admin breadcrumbs added

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -11,5 +11,10 @@
 
   %body
     = render partial: 'layouts/admin_topbar'
+
     .container
+
+      %ol.breadcrumb
+        = render_breadcrumbs separator: ' / ', class: :li
+
       = yield
