image upload functional for logos, collections, brands

--- a/app/views/admin/collections/_form.html.haml
+++ b/app/views/admin/collections/_form.html.haml
@@ -1,4 +1,6 @@
 = simple_form_for collection, url: url do |f|
   = f.input :name
   = f.input :about
+  = image_tag collection.logo_url(:thumb) if collection.logo?
+  = f.input :logo
   = f.submit 'Готово', class: [:btn, 'btn-lg', 'btn-success']
