texture admin functional added

--- a/app/views/layouts/_admin_topbar.html.haml
+++ b/app/views/layouts/_admin_topbar.html.haml
@@ -16,6 +16,6 @@
           %a{href: admin_brands_path}
             Производители
 
-        -#%li{class: params[:controller] == 'products' ? 'active' : ''}
-          %a{href: admin_products_path}
+        %li{class: params[:controller] == 'admin/textures' ? 'active' : ''}
+          %a{href: admin_textures_path}
             Товары
