--- a/app/assets/stylesheets/collections.css.sass
+++ b/app/assets/stylesheets/collections.css.sass
@@ -1,1 +1,92 @@
+@import 'settings'
+
 .collections
+  margin-top: 25px
+
+  li
+    padding: 25px 0px
+    background: url('/assets/products_separator.png') no-repeat
+    background-position: bottom
+
+    &:last-child
+      background: none
+
+    .logo
+      float: left
+      margin-right: 20px
+      width: 220px
+
+      img
+        width: 220px
+        border-radius: 8px
+
+    .content
+      float: left
+      width: 700px
+
+      .top-row
+        margin-bottom: 15px
+
+        a
+          font-size: 18px
+          color: $blue_color
+          font-family: 'HelveticaNeue-Regular'
+          text-decoration: underline
+
+      .collection-params
+
+        li
+          display: inline-block
+          margin-right: 20px
+          font-size: 14px
+          font-family: 'HelveticaNeue-Light'
+          color: $soft_font_color
+          padding: 0px
+          background: none
+
+        .bolder
+          font-family: 'HelveticaNeue-Regular'
+          color: $font_color
+
+
+      .about
+        padding: 20px 0
+        font-family: 'HelveticaNeue-Light'
+        font-size: 16px
+        font-color: $font_color
+        line-height: 1.3
+
+      .buttons
+        width: 100%
+        height: 50px
+
+
+        .button
+          float: left
+          display: block
+          margin-right: 20px
+          width: 140px
+          height: 50px
+          line-height: 52px
+          text-align: center
+          background: #fff
+          border: 1px solid $blue_color
+          border-radius: 8px
+
+          color: $blue_color
+          font-family: 'HelveticaNeue-Light'
+
+          cursor: pointer
+
+          &:hover
+            background: $blue_color
+            color: #fff
+
+
+
+    .boofer
+      height: 50px
+      background: url('/assets/products_separator.png') no-repeat
+      background-position: center
+
+
