--- a/app/assets/stylesheets/product.css.sass
+++ b/app/assets/stylesheets/product.css.sass
@@ -100,6 +100,10 @@
             font-family: 'HelveticaNeue-Regular'
             font-size: 14px
             cursor: pointer
+            border: none
+
+            &:hover
+              background: #509CF2
 
             &:last-child
               margin-bottom: 0px
