--- a/app/assets/stylesheets/top.css.sass
+++ b/app/assets/stylesheets/top.css.sass
@@ -48,12 +48,17 @@
       float: right
       text-align: left
       background: $green_color
-      color: #fff
       font-family: 'HelveticaNeue-Light'
-      line-height: 1.3
-      font-size: 14px
-      padding: 15px 30px
-      height: 30px
+
+
+
+      a
+        display: block
+        color: #fff
+        font-size: 14px
+        line-height: 1.3
+        padding: 15px 30px
+        height: 30px
 
       .bolder
         font-family: 'HelveticaNeue-Medium'
