--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = javascript_include_tag 'application'
 
 
+    -#= set_meta_tags site: 'My Site'
     %title
       Ламинат
 
@@ -29,83 +30,12 @@
           = link_to 'Выбор по параметрам', by_parameters_products_path
         %li{class: (params[:controller] == 'brands' or params[:controller] == 'collections') ? 'active' : ''}
           = link_to 'Производители', brands_path
-        %li
+        -#%li
           %a{href: '#'} По артикулу
         %li.cart-widget
-          В вашей корзине
-          %br
-          %span.bolder 5 товаров на сумму
-          27 280₽
+          = render partial: 'cart/widget'
 
       .breadcrumbs
-        %a{href: '#'} Главная
-        = '/'
-        Подбор ламината по параметрам
-
-      .page-title
-        Подбор ламината по параметрам
-
-      #filter
-        .left
-          .filter-widget
-            .label
-              Цена (рублей за м2):
-            .widget-body.clearfix
-              .section.active любая
-              .section до 500
-              .section.two-rows
-                от 500
-                %br
-                до 1 000
-              .section.two-rows
-                от 1 000
-                %br
-                до 2 000
-              .section.two-rows
-                свыше
-                %br
-                2 000
-
-          .dekor-picker{style: 'margin-top: 50px;'}
-            .label
-              Декор:
-            .widget-body.clearfix
-              .preview не выбрано
-              .about-decor
-                Декор ламината, это изображение
-                породы дерева или другого материала,
-                отпечатанного на верхнем декоративном
-                слое.
-
-                %br
-                %br
-
-                Нажмите на квадрат слева, чтобы
-                выбрать декор.
-
-        .right
-          .filter-widget
-            .label
-              Класс ламината:
-            .widget-body.clearfix
-              .section.active любой
-              .section 31
-              .section 32
-              .section 33
-              .section 34
-
-          .color-picker{style: 'margin-top: 50px;'}
-            .label
-              Выбор цвета
-
-            %select{name: :color}
-              %option{value: 'ololo'} Красный
-              %option{value: 'ololo'} Красный
-              %option{value: 'ololo'} Красный
-              %option{value: 'ololo'} Красный
-              %option{value: 'ololo'} Красный
-
-            .filter-button
-              Применить параметры
+        = render_breadcrumbs separator: ' / ', class: :li
 
       = yield
