--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -36,13 +36,13 @@
           следующий день.
 
       .right
-        %form{action: cart_path, method: :post}
+        %form{action: cart_products_path, method: :post}
           .fields
-            %input{type: :text, name: :square, value: '29,2'}
+            %input{type: :text, name: 'cart_product[square]', value: '29,2'}
             &nbsp; м2 =
-            %input{type: :text, name: :count, value: '8'}
+            %input{type: :text, name: 'cart_product[count]', value: '8'}
             &nbsp; уп
-            %input{type: :hidden, name: :product_id, value: @product.id.to_s}
+            %input{type: :hidden, name: 'cart_product[product_id]', value: @product.id.to_s}
 
           .buttons
             %input.button{type: :submit, value: 'Положить в корзину'}
