meters per pack added

--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -6,6 +6,7 @@
   = f.input :type
   = f.input :price
   = f.input :sale_price
+  = f.input :meters_per_pack
   = f.input :length
   = f.input :width
   = f.input :height
