--- a/app/views/cart_products/index.html.haml
+++ b/app/views/cart_products/index.html.haml
@@ -5,7 +5,7 @@
 
   %table.cart-table
     - @cart_products.each do |cart_product|
-      %tr{cart_product_id: cart_product.id}
+      %tr{cart_product_id: cart_product.id, meters_per_pack: cart_product.product.meters_per_pack}
         %td
           = image_tag cart_product.product.image_url(:thumb)
         %td
@@ -14,7 +14,11 @@
           %input.ololo{type: :text, value: cart_product.count.to_s}
           &nbsp; уп
           %br
-          48,6 м2
+          .align-left{style: 'text-align: left; padding-left: 22px'}
+            %number.meters
+              - if cart_product.product.meters_per_pack
+                = sprintf("%.2f", cart_product.count * cart_product.product.meters_per_pack).to_f
+            м2
         %td
           Стоимость (уп):
           .value
