--- a/app/views/products/by_parameters.html.haml
+++ b/app/views/products/by_parameters.html.haml
@@ -2,3 +2,4 @@
   Выбор ламината по параметрам
 
 = render partial: 'products/filter'
+= render partial: 'products/list', locals: {products: @products}
