--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -3,7 +3,7 @@
   = f.input :article
   = image_tag product.image_url(:thumb) if product.image?
   = f.input :image
-  = f.input :type
+  = f.input :product_type
   = f.input :price
   = f.input :sale_price
   = f.input :meters_per_pack
