--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -44,6 +44,15 @@ body
   width: 940px
   margin: 0px auto
 
+.modal-overlay
+  display: none
+  position: fixed
+  z-index: 998
+  width: 100%
+  height: 100%
+  cursor: pointer
+  background: rgba(0,0,0,0.6)
+
 
 a
   color: $blue_color
