--- a/app/assets/stylesheets/filter.css.sass
+++ b/app/assets/stylesheets/filter.css.sass
@@ -161,15 +161,27 @@
 
     .texture
       float: left
+      width: 180px
+      height: 85px
       margin-right: 20px
       margin-bottom: 20px
       padding: 10px
       background: $gray_bg_color
       cursor: pointer
 
+      .empty
+        text-align: center
+        height: 85px
+        line-height: 85px
+        font-family: 'HelveticaNeue-Light'
+        font-size: 16px
+        color: $font_color
+
       &:hover
         background: $blue_color
         .name
+          color: #fff
+        .empty
           color: #fff
 
       &:nth-child(4n)
