--- a/app/assets/stylesheets/cart.css.sass
+++ b/app/assets/stylesheets/cart.css.sass
@@ -95,4 +95,97 @@
       cursor: pointer
 
 
+#cart-modal
+
+  display: none
+
+  z-index: 999
+
+  position: fixed
+  top: 50%
+  left: 50%
+
+  margin-left: -310px
+  margin-top: -160px
+
+  width: 580px
+  height: 280px
+  padding: 20px
+
+
+  background: #fff
+
+
+  .title
+    text-align: center
+    font-family: 'HelveticaNeue-Light'
+    font-size: 18px
+    color: $font_color
+    height: 50px
+    line-height: 50px
+    background: #F7F7F7
+
+
+  .modal-thank
+    display: none
+    width: 100%
+    height: 210px
+    line-height: 210px
+    text-align: center
+    font-family: 'HelveticaNeue-Light'
+    font-size: 24px
+    color: $font_color
+
+  .form
+    margin-top: 20px
+
+
+    .left
+      float: left
+      width: 280px
+
+      input
+        margin-bottom: 20px
+        width: 240px
+        height: 50px
+        background: #fff
+        border: 1px solid #ccc
+        padding: 0px 20px
+
+        font-family: 'HelveticaNeue-Light'
+        font-size: 14px
+        color: $font_color
+
+    .right
+      float: right
+      width: 280px
+
+      textarea
+        margin-bottom: 20px
+        width: 250px
+        height: 95px
+        background: #fff
+        border: 1px solid #ccc
+        padding: 15px
+
+        font-family: 'HelveticaNeue-Light'
+        font-size: 14px
+        color: $font_color
+        line-height: 1.3
+
+      .button
+        margin-bottom: 20px
+        width: 280px
+        height: 50px
+        line-height: 52px
+        text-align: center
+        background: $blue_color
+        color: #fff
+        font-family: 'HelveticaNeue-Regular'
+        font-size: 16px
+        cursor: pointer
+        border: none
+
+        &:hover
+          background: #509CF2
 
