--- a/app/assets/stylesheets/cart.css.sass
+++ b/app/assets/stylesheets/cart.css.sass
@@ -1,5 +1,37 @@
 @import 'settings'
 
+
+.cart-navigation
+  width: 100%
+  height: 50px
+  margin-bottom: 50px
+
+
+  .button
+    float: left
+    display: block
+    margin-right: 20px
+    height: 50px
+    line-height: 52px
+    text-align: center
+    background: #fff
+    border: 1px solid $blue_color
+    border-radius: 8px
+
+    color: $blue_color
+    font-family: 'HelveticaNeue-Light'
+
+    cursor: pointer
+    padding: 0px 30px
+
+    &.active
+      background: $blue_color
+      color: #fff
+
+    &:hover
+      background: $blue_color
+      color: #fff
+
 #cart
 
   table
