--- a/app/assets/stylesheets/product.css.sass
+++ b/app/assets/stylesheets/product.css.sass
@@ -108,6 +108,12 @@
             &:last-child
               margin-bottom: 0px
 
+            &.deferred
+              background: none
+              border: 1px solid $blue_color
+              height: 48px
+              color: $blue_color
+
 
   .tables
     .table
