--- a/app/assets/stylesheets/top.css.sass
+++ b/app/assets/stylesheets/top.css.sass
@@ -36,7 +36,8 @@
 
 
   li
-    display: inline-block
+    float: left
+    display: block
     height: 60px
     text-align: center
     padding: 0px 30px
@@ -57,7 +58,7 @@
         color: #fff
         font-size: 14px
         line-height: 1.3
-        padding: 15px 30px
+        padding: 15px 10px
         height: 30px
 
       .bolder
